[package]
name = "actix-webserver"
version = "0.3.0"
edition = "2021"

# About
authors = ["Patrick Ramp"]
description = "An optimized Actix web server application"
license = "MIT" # Choose a license that suits your project
repository = "https://github.com/patrickramp/actix-webserver"
readme = "README.md"

[dependencies]
# Actix Web dependencies
actix-files = "0.6.6"
actix-web = "4.9.0"

# Logging
env_logger = "0.11.6"
log = "0.4.22"

# Error handling with anyhow
anyhow = "1.0.95"

# Optional serialization dependencies

# Uncomment to add these if required for your use case
#serde = { version = "1.0.217", features = ["derive"] }
#serde_json = "1.0.135"
